# dart-linux-interactor

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  README.md
.github/workflows/: interactor.yml
dart/: out  output.txt  pubspec.yaml
dart/lib/: linux_interactor.dart
dart/lib/interactor/: bindings.dart  buffers.dart  calls.dart  channel.dart  configuration.dart  constants.dart  consumer.dart  data.dart  declaration.dart  defaults.dart  exception.dart  extensions.dart  factory.dart  interactor.dart  lookup.dart  message.dart  messages.dart  notifications.dart  operation.dart  payload.dart  payloads.dart  producer.dart  registrat.dart  registry.dart  service.dart  system.dart  timeout.dart  tuple.dart  tuples.dart  worker.dart
documentation/: docusaurus.config.ts  package.json
documentation/docs/: index.mdx  intro.md  intro.mdx  introduction.mdx  usage.mdx
documentation/docs/api/: 01-consumer.mdx  _category_.yml  consumer.mdx  producer.mdx
documentation/docs/api/dart/: 01-consumer.mdx  01-interactor.mdx  02-producer.mdx  02-worker.mdx  03-configuration.mdx  03-interactor.mdx  04-consumer.mdx  04-worker.mdx  05-producer.mdx  06-call.mdx  06-notification.mdx  07-call.mdx  07-configuration.mdx  08-pools.mdx  _category_.yml
documentation/docs/api/native/: 01-interactor.mdx  01-message.mdx  02-configuration.mdx  03-message.mdx  04-pools.mdx  _category_.yml
documentation/docs/guides/: _category_.yml  from-dart-to-linux.mdx  from-linux-to-dart.mdx
documentation/resources/: favicon.xcf
documentation/src/css/: custom.css
documentation/src/pages/: index.tsx
native/: CMakeLists.txt  interactor.c  interactor.h  interactor_buffers_pool.c  interactor_buffers_pool.h  interactor_collections.c  interactor_collections.h  interactor_common.c  interactor_common.h  interactor_constants.c  interactor_constants.h  interactor_dart.c  interactor_dart.h  interactor_dart_implementation.c  interactor_dart_implementation.h  interactor_data_pool.c  interactor_datas_pool.h  interactor_memory.c  interactor_memory.h  interactor_message.h  interactor_messages_pool.c  interactor_messages_pool.h  interactor_native.c  interactor_payload_pool.c  interactor_payloads_pool.c  interactor_payloads_pool.h  interactor_worker.c  interactor_worker.h  test.c
native/common/: common.h  configuration.h
native/include/: interactor_buffers_pool.h  interactor_constants.h  interactor_dart.h  interactor_data_pool.h  interactor_io_buffers.h  interactor_memory.h  interactor_message.h  interactor_messages_pool.h  interactor_native.h  interactor_payload_pool.h  interactor_payloads_pool.h  interactor_static_buffers.h  interactor_tuple.h
native/liburing/src/include/liburing/: io_uring.h
native/native/: Makefile
native/patches/: small-patch-apply.sh  small-patch-create.sh  small-patch-prepare.sh  small-patch.diff
native/salad/: mhash.h
native/small/: CMakeLists.txt
native/small/perf/: CMakeLists.txt
native/small/small/: slab_cache.c
native/small/test/: CMakeLists.txt
native/trivia/: config.h  config.h.cmake  util.h
test/dart/: bindings.dart  main.dart  pubspec.yaml  test.dart
test/dart/lib/: bindings.dart  call.dart  consumer.dart  producer.dart  run.dart  test.dart  threading.dart  timeout.dart
test/native/: CMakeLists.txt  Makefile  test.c  test.h  test_call.c  test_call.h  test_threading.c  test_threading.h
